--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,13 @@
 <body>
     <div class="container">
         <div>
-            <div class="cell b-t b-b">x</div>
-            <div class="cell b-t">x</div>
-            <div class="cell b-t b-b b-r">x</div>
+            <div class="cell b-t b-b">x</div><div class="cell b-t">x</div><div class="cell b-t b-b b-r">x</div>
         </div>
         <div>
-            <div class="cell b-t b-r b-l">0</div>
-            <div class="cell b-l b-r">x</div>
-            <div class="cell b-t b-b b-l b-r">0</div>
+            <div class="cell b-t b-r b-l">0</div><div class="cell b-l b-r">x</div><div class="cell b-t b-b b-l b-r">0</div>
         </div>
       <div>
-            <div class="cell b-b b-l b-r">0</div>
-            <div class="cell b-l b-b">x</div>
-            <div class="cell b-t b-b ">x</div>
+            <div class="cell b-b b-l b-r">0</div><div class="cell b-l b-b">x</div><div class="cell b-t b-b ">x</div>
            
         </div>  
     </div>
