--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <title>Maze Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css" />
-    <script src="javascripts/main.js"></script>
 </head>
 <body>
     <div class="container">
-        <div>
+        <!-- <div>
             <div class="cell b-t b-b">x</div><div class="cell b-t">x</div><div class="cell b-t b-b b-r">x</div>
         </div>
         <div>
@@ -19,7 +18,7 @@
       <div>
             <div class="cell b-b b-l b-r">0</div><div class="cell b-l b-b">x</div><div class="cell b-t b-b ">x</div>
            
-        </div>  
+        </div>   -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
