--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css" />
 </head>
 <body>
-    <div class="container">
-        <!-- <div>
-            <div class="cell b-t b-b">x</div><div class="cell b-t">x</div><div class="cell b-t b-b b-r">x</div>
-        </div>
-        <div>
-            <div class="cell b-t b-r b-l">0</div><div class="cell b-l b-r">x</div><div class="cell b-t b-b b-l b-r">0</div>
-        </div>
-      <div>
-            <div class="cell b-b b-l b-r">0</div><div class="cell b-l b-b">x</div><div class="cell b-t b-b ">x</div>
-           
-        </div>   -->
+    <div class="container" id="maze">
+       
     </div> 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
