--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <div class="dropDownContainer">
             <!-- <input id="dropDown" type="button" onclick="" value="Menu"> -->
             <div class="customSelect">
-                <select id="optionSelect">
+                <form id="mazeLevels">
+                <select id="optionSelect" onchange="displayLevels()">
                     <option value="4">Very easy</option>
                     <option value="5">Easy</option>
                     <option value="6">Medium</option>
@@ -23,6 +24,7 @@
                     <option value="9">Hard</option>
                     <option value="10">Master</option>
                 </select>
+                </form>
             </div>
 
         </div>
