can move to all levels and display borders

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,16 @@
                     </select>
                 </form>
             </div>
-
         </div>
         <input id="startMaze" type="button" onclick="loadMaze()" value="Start" />
     </div>
+
+    <div class="showLevel">
+        <span class="noteMazeShow">
+            <h5 id="mazeTopic"></h5>
+        </span>
+    </div>
+
     <div class="container" id="maze">
 
     </div>
