final position message in progress

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,15 @@
     </div>
 
     <div class="container" id="maze">
-
     </div>
+
+    <div id="modal-message">
+            <div id="message">
+                <h1>Felicitari!</h1>
+                <p>Ai ajuns la final</p>
+                <input type="button" onclick="modalVisability('modal-message')" value="Restart">
+            </div>
+        </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
