--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <div id="message">
                 <h1>Felicitari!</h1>
                 <p>Ai ajuns la final</p>
-                <input type="button" onclick="modalVisability('modal-message')" value="Restart">
+                <input type="button" onclick="modalVisibility('modal-message')" value="Restart">
             </div>
         </div>
 
