--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
             <div class="customSelect">
                 <form id="mazeLevels">
                     <select id="optionSelect" onchange="displayLevels()">
-                        <option value="2">Very easy</option>
-                        <option value="3">Easy</option>
-                        <option value="4">Medium</option>
-                        <option value="5">Average</option>
-                        <option value="6">Classic</option>
-                        <option value="7">Hard</option>
-                        <option value="1">Master</option>
+                        <option value="2">Level 1</option>
+                        <option value="3">Level 2</option>
+                        <option value="4">Level 3</option>
+                        <option value="5">Level 4</option>
+                        <option value="6">Level 5</option>
+                        <option value="7">Level 6</option>
+                        <option value="1">Level 7</option>
                     </select>
                 </form>
             </div>
@@ -40,8 +40,8 @@
 
     <div id="modal-message">
         <div id="message">
-            <h1>Felicitari!</h1>
-            <p>Ai ajuns la final</p>
+            <h1>Congratulations!</h1>
+            <p>You just finished the current level.</p>
             <input type="button" onclick="modalVisibility('modal-message')" value="Restart">
         </div>
     </div>
